# labs-c-HSE

./: README.md
lab03-list-heap/: README.md  expected-tests.txt
lab04-tic-tac-toe/: CMakeLists.txt  README.md
lab04-tic-tac-toe/include/: game.h  view.h
lab04-tic-tac-toe/mytest/: CMakeLists.txt  mytest-check.sh
lab04-tic-tac-toe/mytest/demo/: demo1.cpp  demo2.cpp  demo3.cpp
lab04-tic-tac-toe/mytest/include/: mytest.h
lab04-tic-tac-toe/mytest/src/: mytest.cpp  mytest_main.cpp
lab04-tic-tac-toe/src/: game.cpp  game_test.cpp  main.cpp  view_cli_loud.cpp  view_cli_silent.cpp
lab04-tic-tac-toe/test-data/: silent-01.out
lab05-ptrs/: .clang-tidy  CMakeLists.txt  README.md  expected-tests-std.txt  expected-tests.txt  shared_ptr.h  shared_ptr_test.cpp  unique_ptr.h  unique_ptr_test.cpp
lab06-employees/: .clang-tidy  CMakeLists.txt  README.md  employees.cpp  employees.h  employees_test.cpp  expected-tests.txt  main.cpp  run-test-data.sh  run-test-interactive.py
lab06-employees/test-data/: 01.data  01.devs.expected  01.expected  01.in  01.leads.expected  01.managers.expected  02.all.expected  02.expected  02.in
lab08-bmp/: .clang-tidy  CMakeLists.txt  README.md  run-test-data.sh
lab08-bmp/include/: curl.h  image.h
lab08-bmp/src/: curl.cpp  image.cpp  main.cpp  test_image.cpp
lab08-bmp/test-data/: .gitignore
lab09-calc/: .clang-tidy  CMakeLists.txt  README.md  calc_cli.c  calc_test.cpp  calc_test_c.c  demo-parser.c  run-test-data.sh
lab09-calc/lib/: CMakeLists.txt
lab09-calc/lib/include/: calc.h
lab09-calc/lib/src/: calc.c
lab09-calc/test-data/: .gitignore  01.expected  01.in  02.expected  02.gen.py
lab10-bank/: CMakeLists.txt  README.md  bank.cpp  bank.h  bank_test.cpp  run-test-server.py
